service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
spec:
  selector: 
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: LoadBalancer
