ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ing
  labels:
    name: petclinic
spec:
  rules:
  - host: petclinic.jagadishkandi.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: petclinic
            port: 
              number: 80
